2008-01-28  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwarf_derived_probe_group::emit_module_decls):
	Added 'const' to several members of stap_dwarf_probes.

	PR 5685.  From Eugeniy Meshcheryakov <eugen@debian.org>
	* configure.ac: If "--enable-sqlite" is specified, define
	HAVE_LIBSQLITE3.
	* configure: Regenerated.

2008-01-26  Frank Ch. Eigler  <fche@elastic.org>

	PR 5673.
	* tapsets.cxx (dwarf_derived_probe_group): Split stap_dwarf_probes[]
	into bss-carried kprobes structs.  Tune embedded strings for
	minimizing relocation-vs-fixed-buffer wastage.
	* tapsets.cxx (dwarf_derived_probe): Impose .maxactive() limits.

2008-01-25  Jim Keniston  <jkenisto@us.ibm.com>

	* runtime/uprobes/uprobes.c: Within a probed process, serialize
	calls to access_process_vm() when populating instructions
	slots.	Fixes an SMP bug on multithreaded apps with many
	active probepoints.
	* runtime/uprobes/uprobes.h: Ditto

2008-01-25  Frank Ch. Eigler  <fche@elastic.org>

	PR 5672.
	* staptree.cxx (probe_point copy ctor): New function.
	* staptree.h: Declare it.
	* tapsets.cxx (dwarf_derived_probe ctor): Call it to shallow-copy
	incoming base probe location before recomputing/overwriting it.

2008-01-25  David Smith  <dsmith@redhat.com>

	* configure.ac: Compressed the two perfmon options into one.
	Made other small fixes and whitespace changes.
	* configure: Regenerated.

2008-01-24  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am: Make another $(MKDIR) call visible.
	* Makefile.in: Regenerated.

2008-01-24  David Smith  <dsmith@redhat.com>

	PR 5661 (reverted).
	* configure.ac: Removed elfutils version number check.
	* configure: Regenerated.
	* acsite.m4: Removed.
	* systemtap.spec.in: Minimum elfutils version number is no longer
	filled in by configure.
	
	PR 5650 (partial).
	* configure.ac: Handles sqlite optional functionality correctly.
	If enabled/disabled by the user, do the right thing.  If not
	specified by the user, use it if present.
	* configure: Regenerated.